src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Contact__r.Account.Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendee_Probability__c</fullName>
        <label>Attendee Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COD_Warning__c</fullName>
        <formula>if( Contact__r.Account.COD_Warning__c = TRUE, IMAGE(&quot;http://upload.wikimedia.org/wikipedia/commons/1/19/Portrait_of_Cod.jpg&quot;,&quot;COD Warning&quot;, 260, 350),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COD Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName+&apos; &apos;+ Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Testing_Notes__c</fullName>
        <formula>Contact__r.Testing_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Testing Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Deposition_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Reporter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Industry</field>
                <operation>equals</operation>
                <value>Court Reporting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees (Court Reporter)</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Invoice__c</fullName>
        <formula>HYPERLINK(&quot;/apex/createInvoice?id=&quot;+ Id , &quot;Create Invoice&quot;)</formula>
        <label>Create Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Deposition__c</fullName>
        <label>Date of Deposition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposition_Date__c</fullName>
        <formula>Deposition__r.Deposition_Date__c</formula>
        <label>Deposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition Location</label>
        <referenceTo>Deposition_Location__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition_Page_Count__c</fullName>
        <formula>Deposition__r.Page_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Page Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Services__c</fullName>
        <label>Deposition Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Court Reporter</fullName>
                </value>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Realtime</fullName>
                </value>
                <value>
                    <fullName>Remote Deposition</fullName>
                </value>
                <value>
                    <fullName>Rough Draft</fullName>
                </value>
                <value>
                    <fullName>Synchronized Video</fullName>
                </value>
                <value>
                    <fullName>Traditional Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposition_Source__c</fullName>
        <formula>Deposition__r.Source__c</formula>
        <label>Deposition Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Status__c</fullName>
        <formula>TEXT(Deposition__r.Deposition_Status__c)</formula>
        <label>Deposition Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <label>Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipName>Deposition_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Parent_Account_Owner__c</fullName>
        <formula>Contact__r.Account.Parent.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Parent Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_of_Account_Owner1__c</fullName>
        <label>Email of Account Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_of_Parent_Account__c</fullName>
        <label>Email of Parent Account Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <formula>BLANKVALUE(Deposition_Location__r.Location_Address__c,  Deposition__r.Event_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Level__c</fullName>
        <label>Expedite Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same day turnaround</fullName>
                </value>
                <value>
                    <fullName>Next day turnaround</fullName>
                </value>
                <value>
                    <fullName>2 day turnaround</fullName>
                </value>
                <value>
                    <fullName>3 day turnaround</fullName>
                </value>
                <value>
                    <fullName>4 day turnaround</fullName>
                </value>
                <value>
                    <fullName>5 day turnaround</fullName>
                </value>
                <value>
                    <fullName>6 day turnaround</fullName>
                </value>
                <value>
                    <fullName>7 day turnaround</fullName>
                </value>
                <value>
                    <fullName>8 day turnaround</fullName>
                </value>
                <value>
                    <fullName>9 day turnaround</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Notes__c</fullName>
        <formula>Contact__r.Financial_Notes__c &amp; Contact__r.Account.Financial_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Account__c</fullName>
        <formula>Contact__r.Account.Hard_Copy__c = TRUE
 || 
Contact__r.Hard_Copy__c  = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hard Copy Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Contact__r.Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Received</fullName>
                    <default>true</default>
                    <label>Not Received</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_locked_to_Create_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is locked to Create Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatestDepositionFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LatestDepositionFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked_By__c</fullName>
        <label>Locked By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Followup__c</fullName>
        <label>Most Recent Followup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_site_Check_In__c</fullName>
        <label>On-site Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Contact__r.Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Expenses__c</fullName>
        <label>Parking/Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PastTime_50Min__c</fullName>
        <formula>NOW() - (55/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PastTime 50Min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap_Notes__c</fullName>
        <label>Recap Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remove_Reporter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to completely remove a reporter from a deposition.</description>
        <label>Remove Reporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporter_EOD_Check_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporter EOD Check In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Claims Manager</fullName>
                </value>
                <value>
                    <fullName>Corporate Client</fullName>
                </value>
                <value>
                    <fullName>Court Reporter</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Process Server</fullName>
                </value>
                <value>
                    <fullName>Scheduler</fullName>
                </value>
                <value>
                    <fullName>Tester</fullName>
                </value>
                <value>
                    <fullName>Videographer/Technician</fullName>
                </value>
                <value>
                    <fullName>Paralegal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Same_Account_Name_as_Hiring_Attorney__c</fullName>
        <formula>Account_Name__c =  Deposition__r.Hiring_Firm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Account Name as Hiring Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduling Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Multiple_Jobs_On_Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Multiple Jobs On Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Notes__c</fullName>
        <label>Shipping Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standing_Order__c</fullName>
        <formula>Contact__r.Standing_Orders__c &amp;  Contact__r.Account.Standing_Orders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standing Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_Orders_del__c</fullName>
        <formula>BLANKVALUE( Contact__r.Standing_Orders__c , &quot;&quot;)
&amp;
 BLANKVALUE( Contact__r.Account.Standing_Orders__c , &quot;&quot;)</formula>
        <label>Standing Orders</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>(Departure_Time__c - Arrival_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp_of_Recap__c</fullName>
        <label>Timestamp of Recap</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <description>Total invoice amount</description>
        <label>Total Invoice Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transcript_Due_Date__c</fullName>
        <formula>Deposition__r.Transcript_Due_From_Reporter_Computed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Turn_In_Link__c</fullName>
        <formula>$Setup.URL_Setting__c.Site_URL__c&amp;&quot;/DepositionTurnIn?attendeeId=&quot;&amp;Id&amp;&quot;&amp;id=&quot;&amp;Deposition__r.Id</formula>
        <label>Turn-In Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Level__c</fullName>
        <formula>IF(ISBlank(TEXT(Contact__r.VIP_Level__c)),Text(Contact__r.Account.VIP_Level__c),Text(Contact__r.VIP_Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Videographer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Videographer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Industry</field>
                <operation>equals</operation>
                <value>Court Reporting, Videography</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees (Videographer)</relationshipLabel>
        <relationshipName>Attendees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact_Name__c</columns>
        <columns>Deposition__c</columns>
        <columns>Date_of_Deposition__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Standing_Orders</fullName>
        <columns>NAME</columns>
        <columns>Standing_Orders_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standing_Orders_del__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Standing Orders</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>